--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.4",
     "@google/generative-ai": "^0.21.0",
     "@react-native-masked-view/masked-view": "0.3.2",
+    "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
+    "@supabase/supabase-js": "^2.48.1",
     "axios": "^1.7.9",
     "expo": "~52.0.30",
     "expo-av": "~15.0.2",
@@ -22,6 +25,7 @@
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-dotenv": "^3.4.11",
+    "react-native-maps": "^1.20.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0"
   },
