--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-maps": "^1.20.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0"
+    "react-native-screens": "~4.4.0",
+    "@react-native-picker/picker": "2.9.0",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
