Hospital Notification Updated

--- a/app.json
+++ b/app.json
@@ -51,7 +51,7 @@
       ],
       "config": {
         "googleMaps": {
-          "apiKey": ""
+          "apiKey": "AIzaSyAaRnCKVVSWGR159MyTF6rV7NMIPsW960c"
         }
       }
     },
