--- a/app.json
+++ b/app.json
@@ -66,9 +66,9 @@
     },
     "extra": {
       "eas": {
-        "projectId": "b8a64f1c-20b6-4b94-932f-a6875af80938"
+        "projectId": "4faf99d3-698c-49b7-b84d-53ac51201a9f"
       }
     },
-    "owner": "sashy"
+    "owner": "ayush03"
   }
 }
