--- a/app.json
+++ b/app.json
@@ -6,39 +6,18 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
-    "newArchEnabled": true,
-    "assets": ["./assets/sounds/*"],
-    "notification": {
-      "icon": "./assets/notification-icon.png",
-      "color": "#ff0000",
-      "sounds": ["./assets/sounds/emergency-alert.mp3"]
-    },
-    "plugins": [
-      [
-        "expo-location",
-        {
-          "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location for emergency services.",
-          "locationAlwaysPermission": "Allow $(PRODUCT_NAME) to use your location for emergency services.",
-          "locationWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location for emergency services."
-        }
-      ]
-    ],
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.yourcompany.medisync",
-      "infoPlist": {
-        "UIBackgroundModes": [
-          "location",
-          "audio"
-        ],
-        "NSLocationWhenInUseUsageDescription": "This app needs access to location services for emergency location tracking.",
-        "NSLocationAlwaysUsageDescription": "This app needs access to location services for emergency location tracking.",
-        "NSMicrophoneUsageDescription": "This app needs access to the microphone to record emergency audio messages."
+      "config": {
+        "googleMapsApiKey": ""
       }
     },
     "android": {
@@ -46,29 +25,38 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.yourcompany.medisync",
       "permissions": [
         "RECORD_AUDIO",
-        "ACCESS_COARSE_LOCATION",
         "ACCESS_FINE_LOCATION",
-        "ACCESS_BACKGROUND_LOCATION",
-        "android.permission.ACCESS_COARSE_LOCATION",
-        "android.permission.ACCESS_FINE_LOCATION"
+        "ACCESS_COARSE_LOCATION",
+        "RECEIVE_BOOT_COMPLETED",
+        "VIBRATE",
+        "INTERNET"
       ],
-      "config": {
-        "googleMaps": {
-          "apiKey": "AIzaSyAaRnCKVVSWGR159MyTF6rV7NMIPsW960c"
-        }
-      }
+      "package": "com.ayushr03.medisync"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "extra": {
       "eas": {
-        "projectId": "4faf99d3-698c-49b7-b84d-53ac51201a9f"
+        "projectId": "2c80fd4d-5123-44f4-b3f3-651413aa9cfc"
       }
     },
-    "owner": "ayush03"
+    "plugins": [
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "This app needs access to location when open and in the background."
+        }
+      ],
+      [
+        "./plugins/react-native-maps-plugin.js",
+        {
+          "googleMapsApiKey": ""
+        }
+      ]
+    ],
+    "owner": "ayushr03"
   }
 }
