--- a/package.json
+++ b/package.json
@@ -4,41 +4,46 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.4",
+    "@expo/vector-icons": "^14.1.0",
     "@google/generative-ai": "^0.21.0",
     "@mapbox/polyline": "^1.2.1",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-masked-view/masked-view": "0.3.2",
-    "@react-native-picker/picker": "2.9.0",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
-    "@supabase/supabase-js": "^2.48.1",
+    "@supabase/supabase-js": "^2.51.0",
     "axios": "^1.7.9",
-    "expo": "~52.0.30",
-    "expo-av": "~15.0.2",
-    "expo-device": "^7.0.2",
-    "expo-file-system": "~18.0.10",
-    "expo-location": "^18.0.6",
-    "expo-notifications": "^0.29.13",
-    "expo-router": "^4.0.17",
-    "expo-sms": "~13.0.1",
-    "expo-status-bar": "~2.0.1",
-    "react": "18.3.1",
-    "react-native": "0.76.6",
+    "expo": "^53.0.19",
+    "expo-av": "~15.1.7",
+    "expo-constants": "^17.1.7",
+    "expo-dev-client": "~5.2.4",
+    "expo-device": "~7.1.4",
+    "expo-file-system": "~18.1.11",
+    "expo-location": "~18.1.6",
+    "expo-notifications": "~0.31.4",
+    "expo-router": "~5.1.3",
+    "expo-sms": "~13.1.4",
+    "expo-status-bar": "~2.2.3",
+    "react": "19.0.0",
+    "react-native": "0.79.5",
+    "react-native-async-storage": "^0.0.1",
     "react-native-dotenv": "^3.4.11",
-    "react-native-maps": "^1.20.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0"
+    "react-native-maps": "1.20.1",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
+    "babel-plugin-dotenv": "^0.1.1",
     "typescript": "^5.3.3"
   },
   "private": true
